--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Getir's Backend Assignment",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/bugrahan/getir/issues"
   },
-  "homepage": "https://github.com/bugrahan/getir#readme"
+  "homepage": "https://github.com/bugrahan/getir#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.19"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
