--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "getir",
   "version": "1.0.0",
   "description": "Getir's Backend Assignment",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
