--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/bugrahan/getir#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.6.0",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.19"
   },
